fixed lines in greetings html

--- a/greetings.html
+++ b/greetings.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <script>
-    var username = prompt("Hey whats your name?")
-    console.log("hi "+ username);
-    document.write("hi "+ username);
+        var username = prompt("Hey whats your name?");
+        console.log("hi " + username + "!");
+        document.write("hi " + username + "!");
     </script>
   </body>
 </html>
